# Pi-Under-Pressure

./: .gitignore  Cargo.toml  LICENSE  RPi5-OC-Guide.md  install.sh  readme.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/detection/: errors.rs  mod.rs  nvme.rs
src/stress/: cpu.rs  memory.rs  mod.rs  nvme.rs  video.rs
src/system/: config.rs  info.rs  mod.rs  monitor.rs
src/ui/: mod.rs  simple.rs  tui.rs
